<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course01" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course02" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course03" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course04" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course05" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course07" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course08" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course10" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course13" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course14" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_course15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_course15" />

</LinearLayout>